fixed the email address that was too long for the mobile view

--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -69,5 +69,8 @@
         font-size: 2rem;
         }
     } 
+    .contactSection p a {
+        font-size: 0.8rem;
+    }
 
 }
